lib/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = [],
        peg$c2 = void 0,
        peg$c3 = function(val) {
                return rootNode;
                /// return val;
            },
        peg$c4 = function(val, nl) {
                return n.EmptyLine( str( val.concat([ nl ])));
            },
        peg$c5 = null,
        peg$c6 = function(ind, val) {
                var node =      val[0];
                var level =     ind && ind.level || 0;

                if ( node.nodeType === n.Element ){
                    addAtLevel( node, level );
                } else if ( node.nodeType === n.GroupNode ){
                    addAtLevel( n.Element( "p", node.children ), level );
                } else {
                    throw Error( "Don't know how to add node of type " + node.nodeType );
                }
                /// return n.Block( val, { level: ind && ind.level || 0 });
            },
        peg$c7 = function(val) {
                return val;
            },
        peg$c8 = function(val) {
                return n.GroupNode( val );
            },
        peg$c9 = "#",
        peg$c10 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c11 = function(val) { return n.Element( "h1", val ); },
        peg$c12 = "##",
        peg$c13 = { type: "literal", value: "##", description: "\"##\"" },
        peg$c14 = function(val) { return n.Element( "h2", val ); },
        peg$c15 = "###",
        peg$c16 = { type: "literal", value: "###", description: "\"###\"" },
        peg$c17 = function(val) { return n.Element( "h3", val ); },
        peg$c18 = "####",
        peg$c19 = { type: "literal", value: "####", description: "\"####\"" },
        peg$c20 = function(val) { return n.Element( "h4", val ); },
        peg$c21 = "#####",
        peg$c22 = { type: "literal", value: "#####", description: "\"#####\"" },
        peg$c23 = function(val) { return n.Element( "h5", val ); },
        peg$c24 = "######",
        peg$c25 = { type: "literal", value: "######", description: "\"######\"" },
        peg$c26 = function(val) { return n.Element( "h6", val ); },
        peg$c27 = /^[\-+*]/,
        peg$c28 = { type: "class", value: "[\\-+*]", description: "[\\-+*]" },
        peg$c29 = function(val) { return n.Element( "ul", [n.Element( "li", val )]); },
        peg$c30 = ".",
        peg$c31 = { type: "literal", value: ".", description: "\".\"" },
        peg$c32 = function(val) { return n.Element( "ol", [n.Element( "li", val )]); },
        peg$c33 = ">   ",
        peg$c34 = { type: "literal", value: ">   ", description: "\">   \"" },
        peg$c35 = function(val) { return n.Element( "blockquote", val ); },
        peg$c36 = /^[*\-]/,
        peg$c37 = { type: "class", value: "[*\\-]", description: "[*\\-]" },
        peg$c38 = function() {
                return n.Element( "hr" );
            },
        peg$c39 = "```",
        peg$c40 = { type: "literal", value: "```", description: "\"```\"" },
        peg$c41 = function(type, val) {
                if( type ){
                    return n.Element( "pre", str( val ), { className: type });
                } else {
                    return n.Element( "pre", str( val ));
                }
            },
        peg$c42 = /^[^`]/,
        peg$c43 = { type: "class", value: "[^`]", description: "[^`]" },
        peg$c44 = "`",
        peg$c45 = { type: "literal", value: "`", description: "\"`\"" },
        peg$c46 = "``",
        peg$c47 = { type: "literal", value: "``", description: "\"``\"" },
        peg$c48 = /^[*_]/,
        peg$c49 = { type: "class", value: "[*_]", description: "[*_]" },
        peg$c50 = function(val) {
                return n.Element( "strong", val && val.children || val );
            },
        peg$c51 = /^[^*_]/,
        peg$c52 = { type: "class", value: "[^*_]", description: "[^*_]" },
        peg$c53 = function(val) {
                return n.Element( "em", val );
            },
        peg$c54 = "~",
        peg$c55 = { type: "literal", value: "~", description: "\"~\"" },
        peg$c56 = /^[^~]/,
        peg$c57 = { type: "class", value: "[^~]", description: "[^~]" },
        peg$c58 = function(val) {
                return n.Element( "strike", val );
            },
        peg$c59 = function(val) {
                return n.Element( "code", val );
            },
        peg$c60 = "{{:",
        peg$c61 = { type: "literal", value: "{{:", description: "\"{{:\"" },
        peg$c62 = "}}",
        peg$c63 = { type: "literal", value: "}}", description: "\"}}\"" },
        peg$c64 = function(val) {
                return n.JsBlock( val );
            },
        peg$c65 = "{{=",
        peg$c66 = { type: "literal", value: "{{=", description: "\"{{=\"" },
        peg$c67 = function(val) {
                return n.JsExpr( val );
            },
        peg$c68 = "{{",
        peg$c69 = { type: "literal", value: "{{", description: "\"{{\"" },
        peg$c70 = function(val) {
                return n.JsValue( val );
            },
        peg$c71 = "}",
        peg$c72 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c73 = /^[^}]/,
        peg$c74 = { type: "class", value: "[^}]", description: "[^}]" },
        peg$c75 = function(val) {
                return str( val );
            },
        peg$c76 = /^[^}\n\r\u2028\u2029]/,
        peg$c77 = { type: "class", value: "[^}\\n\\r\\u2028\\u2029]", description: "[^}\\n\\r\\u2028\\u2029]" },
        peg$c78 = "<",
        peg$c79 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c80 = ">",
        peg$c81 = { type: "literal", value: ">", description: "\">\"" },
        peg$c82 = function(name, id, classes, attr, cont) {
                return n.Element( name, [], _.extend( attr, { id: id, className: classes.join( " " )}));
            },
        peg$c83 = function(name, id, classes, attr, val) {
                return n.Element( name, [], _.extend( attr, { id: id, className: classes.join( " " )}));
            },
        peg$c84 = /^[a-zA-Z]/,
        peg$c85 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c86 = /^[\-a-zA-Z0-9:]/,
        peg$c87 = { type: "class", value: "[\\-a-zA-Z0-9:]", description: "[\\-a-zA-Z0-9:]" },
        peg$c88 = function(first, next) {
                return str( [first].concat( next ));
            },
        peg$c89 = "(",
        peg$c90 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c91 = ")",
        peg$c92 = { type: "literal", value: ")", description: "\")\"" },
        peg$c93 = function(attr) {
                return ( attr && attr.length ) ? _.zipObject( attr ) : {};
            },
        peg$c94 = ",",
        peg$c95 = { type: "literal", value: ",", description: "\",\"" },
        peg$c96 = function(name, value) {
                return [ name, value ];
            },
        peg$c97 = "\"",
        peg$c98 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c99 = /^[^"]/,
        peg$c100 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c101 = /^[^>]/,
        peg$c102 = { type: "class", value: "[^>]", description: "[^>]" },
        peg$c103 = "<!DOCTYPE",
        peg$c104 = { type: "literal", value: "<!DOCTYPE", description: "\"<!DOCTYPE\"" },
        peg$c105 = function(val) {
                return n.Doctype( val );
            },
        peg$c106 = "<!--",
        peg$c107 = { type: "literal", value: "<!--", description: "\"<!--\"" },
        peg$c108 = function(val) {
                return n.Comment( "commentTag", val );
            },
        peg$c109 = function(val) {
                return n.Indent( val, val && val.length || 0 );
            },
        peg$c110 = "    ",
        peg$c111 = { type: "literal", value: "    ", description: "\"    \"" },
        peg$c112 = /^[\t]/,
        peg$c113 = { type: "class", value: "[\\t]", description: "[\\t]" },
        peg$c114 = "\r\n",
        peg$c115 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c116 = "\n\r",
        peg$c117 = { type: "literal", value: "\n\r", description: "\"\\n\\r\"" },
        peg$c118 = "\n",
        peg$c119 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c120 = "\r",
        peg$c121 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c122 = function(val) {
                return n.TextNode( val );
            },
        peg$c123 = { type: "any", description: "any character" },
        peg$c124 = /^[\t\x0B\f \xA0\uFEFF]/,
        peg$c125 = { type: "class", value: "[\\t\\x0B\\f \\xA0\\uFEFF]", description: "[\\t\\x0B\\f \\xA0\\uFEFF]" },
        peg$c126 = /^[\n\r\u2028\u2029]/,
        peg$c127 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c128 = /^[^\n\r\u2028\u2029]/,
        peg$c129 = { type: "class", value: "[^\\n\\r\\u2028\\u2029]", description: "[^\\n\\r\\u2028\\u2029]" },
        peg$c130 = /^[^\t\x0B\f \xA0\uFEFF\n\r\u2028\u2029]/,
        peg$c131 = { type: "class", value: "[^\\t\\x0B\\f \\xA0\\uFEFF\\n\\r\\u2028\\u2029]", description: "[^\\t\\x0B\\f \\xA0\\uFEFF\\n\\r\\u2028\\u2029]" },
        peg$c132 = /^[a-zA-Z0-9_]/,
        peg$c133 = { type: "class", value: "[a-zA-Z0-9_]", description: "[a-zA-Z0-9_]" },
        peg$c134 = /^[^a-zA-Z0-9_]/,
        peg$c135 = { type: "class", value: "[^a-zA-Z0-9_]", description: "[^a-zA-Z0-9_]" },
        peg$c136 = /^[0-9]/,
        peg$c137 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c138 = /^[^0-9]/,
        peg$c139 = { type: "class", value: "[^0-9]", description: "[^0-9]" },
        peg$c140 = /^[\-a-zA-Z0-9_]/,
        peg$c141 = { type: "class", value: "[\\-a-zA-Z0-9_]", description: "[\\-a-zA-Z0-9_]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseblockPart();
      if (s2 === peg$FAILED) {
        s2 = peg$parseemptyLine();
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseblockPart();
          if (s2 === peg$FAILED) {
            s2 = peg$parseemptyLine();
          }
        }
      } else {
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parseEOF();
        peg$silentFails--;
        if (s3 !== peg$FAILED) {
          peg$currPos = s2;
          s2 = peg$c2;
        } else {
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c3(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseemptyLine() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseindent();
      if (s2 === peg$FAILED) {
        s2 = peg$parsespace();
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseindent();
        if (s2 === peg$FAILED) {
          s2 = peg$parsespace();
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsenewLine();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseblockPart() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseindent();
      if (s1 === peg$FAILED) {
        s1 = peg$c5;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseblock();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseendBlock();
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c6(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseblock() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsejsBlock();
      if (s1 === peg$FAILED) {
        s1 = peg$parsejsExpr();
        if (s1 === peg$FAILED) {
          s1 = peg$parseblockquote();
          if (s1 === peg$FAILED) {
            s1 = peg$parseh1();
            if (s1 === peg$FAILED) {
              s1 = peg$parseh2();
              if (s1 === peg$FAILED) {
                s1 = peg$parseh3();
                if (s1 === peg$FAILED) {
                  s1 = peg$parseh4();
                  if (s1 === peg$FAILED) {
                    s1 = peg$parseh5();
                    if (s1 === peg$FAILED) {
                      s1 = peg$parseh6();
                      if (s1 === peg$FAILED) {
                        s1 = peg$parseulItem();
                        if (s1 === peg$FAILED) {
                          s1 = peg$parseolItem();
                          if (s1 === peg$FAILED) {
                            s1 = peg$parsecodeBlock();
                            if (s1 === peg$FAILED) {
                              s1 = peg$parsedoctype();
                              if (s1 === peg$FAILED) {
                                s1 = peg$parsecommentTag();
                                if (s1 === peg$FAILED) {
                                  s1 = peg$parsetag();
                                  if (s1 === peg$FAILED) {
                                    s1 = peg$parsehr();
                                    if (s1 === peg$FAILED) {
                                      s1 = peg$parseinline();
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parseendBlock();
        peg$silentFails--;
        if (s3 !== peg$FAILED) {
          peg$currPos = s2;
          s2 = peg$c2;
        } else {
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c7(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseinline() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsejsBlockInline();
      if (s2 === peg$FAILED) {
        s2 = peg$parsejsExprInline();
        if (s2 === peg$FAILED) {
          s2 = peg$parsejsValue();
          if (s2 === peg$FAILED) {
            s2 = peg$parsestrong();
            if (s2 === peg$FAILED) {
              s2 = peg$parseemphasis();
              if (s2 === peg$FAILED) {
                s2 = peg$parsestrikethrough();
                if (s2 === peg$FAILED) {
                  s2 = peg$parseinlineCode();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parseinlineTag();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parsepSpace();
                      if (s2 === peg$FAILED) {
                        s2 = peg$parsepNonSpace();
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parsejsBlockInline();
          if (s2 === peg$FAILED) {
            s2 = peg$parsejsExprInline();
            if (s2 === peg$FAILED) {
              s2 = peg$parsejsValue();
              if (s2 === peg$FAILED) {
                s2 = peg$parsestrong();
                if (s2 === peg$FAILED) {
                  s2 = peg$parseemphasis();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parsestrikethrough();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parseinlineCode();
                      if (s2 === peg$FAILED) {
                        s2 = peg$parseinlineTag();
                        if (s2 === peg$FAILED) {
                          s2 = peg$parsepSpace();
                          if (s2 === peg$FAILED) {
                            s2 = peg$parsepNonSpace();
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      } else {
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c8(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseh1() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s1 = peg$c9;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsespace();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsespace();
          }
        } else {
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseinline();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c11(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseh2() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c12) {
        s1 = peg$c12;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c13); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsespace();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsespace();
          }
        } else {
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseinline();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c14(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseh3() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c15) {
        s1 = peg$c15;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsespace();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsespace();
          }
        } else {
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseinline();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c17(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseh4() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c18) {
        s1 = peg$c18;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsespace();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsespace();
          }
        } else {
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseinline();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c20(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseh5() {
      var s0, s1, s2, s3;
